--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -3,6 +3,7 @@
   font-size: 24px;
   line-height: 29px;
   margin: 0 0 45px;
+  text-align: center;
   }
 @media screen and (max-width: 350px) {
   .popup__title {
