--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -11,7 +11,8 @@
 @import url(./__label/popup__lable.css);
 @import url(./__error/popup__error.css);
 @import url(./__delete-image/popup__delete-image.css);
-
+@import url(./__info-tooltip/popup__info-tooltip.css);
+@import url(./__info-tooltip-pic/popup__info-tooltip-pic.css);
 .popup {
   width: 100vw;
   height: 100vh;
